--- a/package.json
+++ b/package.json
@@ -16,10 +16,18 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "dov": "0.0.1",
+    "env": "0.0.2",
     "eslint": "^7.6.0",
     "express": "^4.17.1",
-    "helmet": "^4.0.0",
-    "morgan": "^1.10.0"
+    "helmet": "^4.1.0",
+    "logger": "0.0.1",
+    "morgan": "^1.10.0",
+    "router": "^1.3.5",
+    "token": "^0.1.0",
+    "uuid": "^8.3.0",
+    "uuidv4": "^6.2.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
