--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --requrie test/setup.js",
+    "test": "mocha --require test/setup.js",
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
     "predeploy": "npm audit",
@@ -26,7 +26,7 @@
     "router": "^1.3.5",
     "token": "^0.1.0",
     "uuid": "^8.3.0",
-    "uuidv4": "^6.2.2",
+    "valid-url": "^1.0.9",
     "winston": "^3.3.3"
   },
   "devDependencies": {
